# halo2-sha256-unoptimized

./: Cargo.toml
src/: lib.rs  utils.rs
